--- a/Lautaro Porcel Sabino 4°15°/lol4.html
+++ b/Lautaro Porcel Sabino 4°15°/lol4.html
@@ -6,9 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Ejercicio</h1>
+    <h1>Ejercicios</h1>
 
     <h2>
+        EJERCICIO 4
         El cálculo de la letra del Documento Nacional de Identidad (DNI) es un proceso matemático
         sencillo que se basa en obtener el resto de la división entera del número de DNI y el número
         23. A partir del resto de la división, se obtiene la letra seleccionándola dentro de un array de
